fix mobile appbar icon spacing

--- a/src/styles/utilities/_responsive.scss
+++ b/src/styles/utilities/_responsive.scss
@@ -308,7 +308,12 @@
   }
 
   .mobile-command-host {
+    display: contents;
     position: static;
+  }
+
+  .mobile-command-host app-command-palette {
+    display: contents;
   }
 
   .mobile-command-host .command-palette {
